# django-invoices-generator

./: .gitignore  README.md  addition.html  db.sqlite3  pyproject.toml  render.yaml  requirements.txt  run_server.sh  vercel.json
.github/workflows/: django.yaml  django.yml
app/: env_example  settings.py  urls.py  wsgi.py
invoices/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
invoices/migrations/: 0001_initial.py  0002_alter_invoice_mailed.py  0002_globalsettings_invoice_global_settings.py  0002_remove_invoice_updated_at.py  0003_invoice_updated_at.py  0003_remove_invoice_products_product_invoice_and_more.py  0003_rename_discount_amount_globalsettings_discount_value.py  0004_documentpdf.py  0004_globalsettings_issuer.py  0004_product_price.py  0004_settings.py  0005_documentpdf_name.py  0005_invoice_tax_base.py  0006_alter_documentpdf_name.py  0006_globalsettings_sequence.py  0007_globalsettings_last_number.py  0007_rename_document_pdf_documentpdf_file_pdf_and_more.py  0008_alter_invoice_number.py  0008_client_address_client_city_client_company_id_number_and_more.py  0009_alter_globalsettings_last_number_and_more.py  0009_client_bank_account_number_and_more.py  0010_globalsettings_lead_zeros_format.py  0010_product_quantity_product_total.py  0011_invoice_tax_base_invoice_total_invoicesetting.py  0011_invoice_unique_code_number.py  0012_alter_invoice_unique_code_number.py  0012_remove_invoice_tax_base_remove_invoicesetting_tax_and_more.py  0013_alter_invoice_total_alter_invoicesetting_discount_and_more.py  0013_company_logo.py  (+24 more)
(+24 files in other folders)
