[tool.poetry]
name = "django-invoices-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
crispy-bootstrap5 = "0.7"
django = "4.2.3"
django-bootstrap-v5 = "1.0.11"
django-browser-reload = "1.11.0"
django-crispy-forms = "2.0"
django-environ = "0.10.0"
django-weasyprint = "2.2.0"
weasyprint = "58.0"
django-request = "^1.6.3"
pydyf = "^0.10.0"
cffi = "^1.0.0"
tinyhtml5 = "^2.0.0b1"
tinycss2 = "^1.3.0"
cssselect2 = "^0.1"
pyphen = "^0.9.1"
pillow = "^10.0.0"
fonttools = {extras = ["woff"], version = "^4.0.0"}
brotlipy = ">=0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
